Updates site with Sept resources and orem game night info

--- a/index.html
+++ b/index.html
@@ -449,48 +449,66 @@
         </section>
       </div>
 
-      <div class="py-24 px-4" id="links">
-        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600 flex flex-col items-center justify-center space-x-2 md:flex-row">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-12" fill="#0096FF">
-            <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-            <path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"/></svg> 
-          <span>Links to Other Singles Groups</span></h3>
-        <div class="flex flex-col items-center justify-center container mx-auto space-y-4 px-4">
-          <a
-            href="https://utahsingleadults.org/"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
-          >Utah County Single Adults</a>
+      <div class="py-24 px-4 bg-white flex flex-col items-center justify-center space-y-24" id="links">
+        <div class="flex flex-col items-center justify-center space-y-8">
+          <h3 class="font-bold text-3xl text-center text-orange-600 flex flex-col items-center justify-center space-x-2 md:flex-row">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-12" fill="#0096FF">
+              <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"/></svg> 
+            <span>Links to Other Singles Groups</span></h3>
+          <div class="flex flex-col items-center justify-center container mx-auto space-y-4 px-4">
+            <a
+              href="https://utahsingleadults.org/"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+            >Utah County Single Adults</a>
 
-          <a
-            href="https://www.timpfhe.org/"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
-          >Mount Timpanogos Singles</a>
+            <a
+              href="https://www.timpfhe.org/"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+            >Mount Timpanogos Singles</a>
 
-          <a href="https://www.facebook.com/groups/the.ritz.utah" target="_blank" rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
-            The Ritz (Facebook)
-          </a>
+            <a href="https://www.facebook.com/groups/the.ritz.utah" target="_blank" rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+              The Ritz (Facebook)
+            </a>
 
-          <a href="https://www.facebook.com/groups/569828349865763" target="_blank" rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
-          >
-            LDS Widows & Widowers - Events Group (Facebook)
-          </a>
+            <a href="https://www.facebook.com/groups/569828349865763" target="_blank" rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+            >
+              LDS Widows & Widowers - Events Group (Facebook)
+            </a>
 
-          <a href="https://www.facebook.com/groups/ldswwofutcounty" target="_blank" rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
-            LDS Widows & Widowers - Utah County (Facebook)
-          </a>
+            <a href="https://www.facebook.com/groups/ldswwofutcounty" target="_blank" rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+              LDS Widows & Widowers - Utah County (Facebook)
+            </a>
 
-          <a href="https://www.facebook.com/groups/358774688789404" target="_blank" rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
-            Utah LDS Singles Group (45 to 65) (Facebook)
-          </a>
-      </div>
+            <a href="https://www.facebook.com/groups/358774688789404" target="_blank" rel="noopener noreferrer nofollow"
+              class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+              Utah LDS Singles Group (45 to 65) (Facebook)
+            </a>
+          </div> <!-- End links to other singles groups -->
+        </div> <!-- End links to other singles groups section -->
+      
+        <div class="flex flex-col items-center justify-center space-y-8">
+          <h3 class="font-bold text-3xl text-center text-orange-600 flex flex-col items-center justify-center space-x-2 md:flex-row">
+            <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 0 24 24" width="48px" fill="#0096FF"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14z"/><circle cx="7.5" cy="16.5" r="1.5"/><circle cx="7.5" cy="7.5" r="1.5"/><circle cx="12" cy="12" r="1.5"/><circle cx="16.5" cy="16.5" r="1.5"/><circle cx="16.5" cy="7.5" r="1.5"/></svg>
+            <span>Other Game Nights</span></h3>
+            <div class="font-sans flex flex-col items-center justify-center space-y-3">
+              <h4 class="font-bold text-lg font-kalam md:text-xl">Game Night at Jesse Loveless' House</h4>
+              <p>Wednesdays at 7-9 pm</p>
+              <a href="https://maps.app.goo.gl/ptMYgSUqLuMTvkXd8" target="_blank" class="hover:text-purple-600 hover:underline">136 W 800 S, Orem, UT 84058</a>
+              <p>Bring a treat to share, and a game to play if you'd like.</p>
+              <p>Off-street parking is available.</p>
+              <p>For more information, contact Jesse at <a href="tel:801-787-0353" class="hover:text-purple-600 hover:underline">801-787-0353</a>.</p>
+              <iframe class="pb-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3043.6699076747027!2d-111.7009951239956!3d40.283082271461375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9ae9231e34a1%3A0x6ba6de78a5fbb9f5!2s136%20W%20800%20S%2C%20Orem%2C%20UT%2084058!5e0!3m2!1sen!2sus!4v1695437060081!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+            </div>
+          </div> <!-- End other game nights -->
+      </div> <!-- End links section -->
     </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
