--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, Oct. 2, 2023</p>
-        <img src="./static/images/fhe-game-night-oct-2023.png" alt="Singles 31+ Game Night/FHE Oct 2023" class="w-full max-w-4xl rounded shadow-lg" />
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday, Nov. 20, 2023</p>
+        <p class="pb-4 text-white text-lg md:text-2xl">NOTE: <span class="underline">Not</span> the normal 1st Monday!</p>
+        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="my-4 rounded-lg"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">7-9 pm</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Lindon Stake Center</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">1050 E 100 N, Lindon</p>
+        <p class="text-white text-xl md:text-2xl">More details to come!</p>
 
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
