--- a/past-events.html
+++ b/past-events.html
@@ -70,12 +70,15 @@
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
-        <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 31+ Game Night/FHE Sept 2023" class="w-full max-w-3xl py-6 px-4" />
-      
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+          <img src="./static/images/fhe-game-night-oct-2023.png" alt="Singles 31+ Game Night/FHE Oct 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+          <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 31+ Game Night/FHE Sept 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+        </div>
+
         <section class="flex flex-col container mx-auto space-y-4">
-            <div class="grid grid-cols-2 gap-4">
-                <img src="./static/images/game-night-fhe-aug-2023.png" alt="Singles 31+ Game Night/FHE Aug 2023" class="w-full max-w-4xl rounded shadow-lg" />
-                <img src="./static/images/July2023FHEGameNight.png" alt="Singles 31+ Game Night/FHE July 2023" class="w-full max-w-lg rounded shadow-lg" />
+            <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+                <img src="./static/images/game-night-fhe-aug-2023.png" alt="Singles 31+ Game Night/FHE Aug 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+                <img src="./static/images/July2023FHEGameNight.png" alt="Singles 31+ Game Night/FHE July 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
             </div>
             <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
                 <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
