--- a/index.html
+++ b/index.html
@@ -96,16 +96,15 @@
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
         <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday, Nov. 20, 2023</p>
         <p class="pb-4 text-white text-lg md:text-2xl">NOTE: <span class="underline">Not</span> the normal 1st Monday!</p>
-        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="my-4 rounded-lg"/>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">7-9 pm</p>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Lindon Stake Center</p>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">1050 E 100 N, Lindon</p>
-        <p class="text-white text-xl md:text-2xl">More details to come!</p>
+        
+        <img src="./static/images/nov-2023-game-night-fhe.png" alt="November 2023 Game Night/FHE" class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0" />
 
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
           class="mt-4 w-full h-96 md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto border-4 border-yellow-400 rounded shadow-lg bg-white p-2 md:p-4"
         ></iframe>
+
+        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="my-4 rounded-lg w-64"/>
       </section>
 
       <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
