--- a/past-events.html
+++ b/past-events.html
@@ -145,6 +145,19 @@
     </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
+      <!-- Internal navigation -->
+      <nav class="flex flex-col items-start justify-start space-y-2 w-full container px-4">
+        <a href="index.html#about" class="text-xs sm:text-sm hover:text-yellow-200">About</a>
+        <a href="index.html#upcoming" class="text-xs sm:text-sm hover:text-yellow-200">Next Event</a>
+        <a href="index.html#email" class="text-xs sm:text-sm hover:text-yellow-200">Email</a>
+        <a href="index.html#invitation" class="text-xs sm:text-sm hover:text-yellow-200">Invitations</a>
+        <a href="index.html#map" class="text-xs sm:text-sm hover:text-yellow-200">Map</a>
+        <a href="index.html#contact" class="text-xs sm:text-sm hover:text-yellow-200">Contact</a>
+        <a href="index.html#past-events" class="text-center text-xs sm:text-sm hover:text-yellow-200">Photo Gallery & Past Events</a>
+        <a href="index.html#links" class="text-xs sm:text-sm hover:text-yellow-200">Other Groups</a>
+        <a href="./resources.html" class="text-xs sm:text-sm hover:text-yellow-200">Resources</a>
+      </nav>
+
       <nav class="pt-2 flex items-center justify-center mb-4">
         <a href="https://github.com/ethyl2" target="_blank" rel="noopener noreferrer"
           class="p-1 rounded hover:bg-orange-400">
@@ -199,7 +212,7 @@
           </div>
         </a>
       </nav>
-      <a href="/index.html" class="pb-2 text-sm hover:text-green-200">Home</a>
+      
       <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
 
