--- a/past-events.html
+++ b/past-events.html
@@ -70,6 +70,8 @@
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
+        <img src="./static/images/nov-2023-game-night-fhe.png" alt="November 2023 Game Night/FHE" class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0" />
+
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/fhe-game-night-oct-2023.png" alt="Singles 31+ Game Night/FHE Oct 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
           <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 31+ Game Night/FHE Sept 2023" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
