--- a/resources.html
+++ b/resources.html
@@ -78,7 +78,7 @@
         <a
           href="https://ethyl2.github.io/fav-games/index.html"
           target="_blank"
-          class="font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-500 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200 flex"
+          class="font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-500 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200 flex"
         >Favorite Free Online Games</a>
       </section>
 
@@ -89,55 +89,62 @@
         <ul class="w-full mx-auto max-w-4xl flex flex-wrap items-center justify-center">
           <li>
             <a href="https://ethyl2.github.io/fav-games/six-second-rule.html" target="_blank"
-              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >Six Second Rule</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/adverb-game.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >Adverb Game</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/go-out-west.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >When I Go Out West...</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/smurf.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >The Smurf Game</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/good-news-bad-news.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >The Good News/Bad News Game</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/whats-yours-like.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
           >What's Yours Like?</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/same-word.html" target="_blank"
-            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
             >Same Word</a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/ministers-cat.html" target="_blank"
-              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
               The Minister's Cat
             </a>
           </li>
           <li>
             <a href="https://ethyl2.github.io/fav-games/name-game.html" target="_blank"
-              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
               The Name Game
             </a>
           </li>
           <li>
             <a href="http://www.littlegiraffes.com/Melt%20an%20Ice%20Cube%20Game.pdf" target="_blank" rel="noopener noreferrer nofollow"
-              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-blue-100 rounded m-2 hover:bg-blue-200">
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 pt-3 pb-2 bg-blue-100 rounded m-2 hover:bg-blue-200">
               The Ice Cube Melting Game 🧊
+            </a>
+          </li>
+
+          <li>
+            <a href="/thanksgiving-bingo.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-orange-700 hover:text-orange-800 px-4 pt-3 pb-2 bg-orange-100 rounded m-2 hover:bg-orange-200">
+              Thanksgiving BINGO 🦃
             </a>
           </li>
         </ul>
