--- a/resources.html
+++ b/resources.html
@@ -142,7 +142,7 @@
           </li>
 
           <li>
-            <a href="/thanksgiving-bingo.html" target="_blank"
+            <a href="./thanksgiving-bingo.html" target="_blank"
               class="flex font-marhey text-sm md:text-xl font-bold text-orange-700 hover:text-orange-800 px-4 pt-3 pb-2 bg-orange-100 rounded m-2 hover:bg-orange-200">
               Thanksgiving BINGO 🦃
             </a>
