--- a/past-events.html
+++ b/past-events.html
@@ -70,6 +70,7 @@
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
+        <img src="./static/images/jan2024gamenight-fhe.png" alt="January 2024 Game Night/FHE" class="border-4 border-yellow-400 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         <img src="./static/images/game-night-dec-2023.png" alt="Dec 2023 Game Night/FHE" class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0" />
         <img src="./static/images/nov-2023-game-night-fhe.png" alt="November 2023 Game Night/FHE" class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0" />
 
