--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           >
             <p class="leading-loose"><span class="font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
             <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
-            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
+            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> We are going to have this twice a month now! Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. And then the 3rd Monday of each month, too! 7-9 pm</p>
             <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
               of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
             1050 E 100 N, Lindon</p>
@@ -95,10 +95,9 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday, 4 March, 2024</p>
-        <img src="./static/images/march-2024-fhe-game-night.png" alt="March 2024 Game Night/FHE" class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday, 18 March, 2024</p>
+        <img src="./static/images/mar-18-2024-game-night-fhe.png" alt="March 18, 2024 Game Night/FHE" class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         
-
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
           class="mt-4 w-full h-96 md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto border-4 border-yellow-400 rounded shadow-lg bg-white p-2 md:p-4"
