--- a/past-events.html
+++ b/past-events.html
@@ -69,6 +69,10 @@
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
+
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+          <img src="./static/images/march-2024-fhe-game-night.png" alt="Singles 31+ Game Night/FHE Feb 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
+        </div>
        
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/feb-2024-fhe-game-night.png" alt="Singles 31+ Game Night/FHE Feb 2024" class="rounded shadow-lg w-full sm:w-1/2 md:w-1/3" />
