Adds test widget

--- a/past-events.html
+++ b/past-events.html
@@ -156,6 +156,8 @@
                 </div>
             </div>
         </section>
+
+        <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b829873-8f52-4099-9622-414c7b363f36" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
     </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
