--- a/past-events.html
+++ b/past-events.html
@@ -157,8 +157,25 @@
             </div>
         </section>
 
-        <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b829873-8f52-4099-9622-414c7b363f36" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
-    </main>
+        <div class="flex flex-col items-center justify-center pt-12 border-t w-full mt-12 space-y-4 pb-24">
+          <h3 class="text-3xl font-bold">Refer Your Friends</h3>
+          <a href="https://bestcompany.com/s/8pztJc" target="_blank" rel="noopener noreferrer" class="font-bold text-lg text-blue-800 hover:text-blue-900">Here!</a>
+        
+          <p>or scan this:</p>
+
+          <img src="./static/images/test-qr.png" alt="QR code for the referral form" class="w-48" />
+
+          <p>or</p>
+
+          <iframe src="https://components.bestcompany.com/Gy1m5G210r/horizontal-referral-widget/9b82a332-de71-49cd-8188-bcab7c3de616" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+
+          <p>or fill this out:</p>
+          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b829873-8f52-4099-9622-414c7b363f36" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+        
+          <script id="bc-sticky-referral-widget-script" data-company="Gy1m5G210r" data-placement="9b82a1a3-32de-48f8-a3d4-4130e684b473" src="https://scripts.bestcompany.com/referral-widget/sticky-referral-widget-v1.min.js"></script>
+
+        </div>
+      </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
       <!-- Internal navigation -->
