Updates test widgets

--- a/past-events.html
+++ b/past-events.html
@@ -159,20 +159,20 @@
 
         <div class="flex flex-col items-center justify-center pt-12 border-t w-full mt-12 space-y-4 pb-24">
           <h3 class="text-3xl font-bold">Refer Your Friends</h3>
-          <a href="https://bestcompany.com/s/8pztJc" target="_blank" rel="noopener noreferrer" class="font-bold text-lg text-blue-800 hover:text-blue-900">Here!</a>
+          <a href="https://bestcompany.com/s/XPoehI" target="_blank" rel="noopener noreferrer" class="font-bold text-lg text-blue-800 hover:text-blue-900">Here!</a>
         
           <p>or scan this:</p>
 
-          <img src="./static/images/test-qr.png" alt="QR code for the referral form" class="w-48" />
+          <img src="./static/images/new-qr-code.png" alt="QR code for the referral form" class="w-48" />
 
           <p>or</p>
 
-          <iframe src="https://components.bestcompany.com/Gy1m5G210r/horizontal-referral-widget/9b82a332-de71-49cd-8188-bcab7c3de616" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/horizontal-referral-widget/9b8c4bfd-380c-44ce-a976-9cff297c7b64" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
 
           <p>or fill this out:</p>
-          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b829873-8f52-4099-9622-414c7b363f36" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
+          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b8c4c42-1463-4f6f-8c3f-ad72592b6a58" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
         
-          <script id="bc-sticky-referral-widget-script" data-company="Gy1m5G210r" data-placement="9b82a1a3-32de-48f8-a3d4-4130e684b473" src="https://scripts.bestcompany.com/referral-widget/sticky-referral-widget-v1.min.js"></script>
+          <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/referral-widget/sticky-referral-widget-v1.min.js"></script>
 
         </div>
       </main>
