--- a/past-events.html
+++ b/past-events.html
@@ -40,6 +40,7 @@
         }
       }
     </script>
+    <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/review-widget/sticky-referral-widget-v1.min.js"></script>
   </head>
 
   <body>
