--- a/past-events.html
+++ b/past-events.html
@@ -171,9 +171,8 @@
           <iframe src="https://components.bestcompany.com/vn9yk7w8BN/horizontal-referral-widget/9b8c4bfd-380c-44ce-a976-9cff297c7b64" height="230" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
 
           <p>or fill this out:</p>
-          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b8c4c42-1463-4f6f-8c3f-ad72592b6a58" height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
-        
-          <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/referral-widget/sticky-referral-widget-v1.min.js"></script>
+          <iframe src="https://components.bestcompany.com/vn9yk7w8BN/embedded-referral-form/9b8c4c42-1463-4f6f-8c3f-ad72592b6a58" 
+          height="560" width="100%" style="display:block; border: none; position: relative; overflow: hidden;"></iframe>
 
         </div>
       </main>
