--- a/resources.html
+++ b/resources.html
@@ -164,6 +164,14 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center">For Celebration of Chocolate Month (Feb):</p>
+            <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/38pwcMdw7UWvrAL9Xo79Y0?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For Valentine's Season:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6QBnCnu0hyMMEEmUuAOcOk?utm_source=generator" width="100%" height="80"
@@ -177,6 +185,15 @@
               src="https://open.spotify.com/embed/playlist/2w6XUvCaixQMutQZ8TIhxu?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center text-sm">For around St. Patrick's Day:</p>
+            <iframe style="border-radius:12px" 
+              src="https://open.spotify.com/embed/playlist/7DMfayFXosPXYn7T2LV9AH?utm_source=generator" 
+              width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+              loading="lazy">
+            </iframe>
           </div>
           
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
