--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
           class="mt-4 w-full h-96 md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto border-4 border-yellow-400 rounded shadow-lg bg-white p-2 md:p-4"
         ></iframe>
 
-        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="my-4 rounded-lg w-64"/>
+        <img src="./static/images/worth-the-wait.png" alt="Some things are worth the wait." class="mt-8 md:mt-12 mb-4 rounded-lg w-64"/>
+        <h4 class="font-bold text-3xl text-center py-4">And in the queue!</h4>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 15 April, 2024</p>
+        <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
       </section>
 
       <section id="email" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center bg-gradient-to-b from-yellow-300 to-yellow-200 w-full">
