Fixes extension on images

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                       </div>                  
                     </li>
                     <li class="glide__slide">
-                      <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_1983.JPG')">
+                      <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_1983.jpg')">
                       </div>                  
                     </li>
                     <li class="glide__slide">
@@ -294,7 +294,7 @@
                       </div>                  
                     </li>
                     <li class="glide__slide">
-                      <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/catan-3d.JPG')">
+                      <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/catan-3d.jpg')">
                       </div>                  
                     </li>
                     <li class="glide__slide">
