--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
         <div class="container mx-auto">
           <section
             id="about"
-            class="mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/80 to-gray-600/80 text-white rounded shadow flex flex-col items-start justify-start space-y-2 md:space-y-4 text-xs md:text-2xl"
+            class="font-sans mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/90 to-gray-600/90 text-white rounded shadow flex flex-col items-start justify-start space-y-2 md:space-y-4 text-xs md:text-2xl"
           >
-            <p class="leading-loose"><span class="font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
-            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> We are going to have this twice a month now! Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. And then the 3rd Monday of each month, too! 7-9 pm</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
+            <p class="leading-loose"><span class="font-kalam font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> We are going to have this twice a month now! Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. And then the 3rd Monday of each month, too! 7-9 pm</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
               of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
             1050 E 100 N, Lindon</p>
-            <p class="leading-loose"><span class="font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
-            <p class="leading-loose"><span class="font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
             <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">How this started:</span> I was at an event for
+            <p class="leading-loose"><span class="font-kalam font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+            <p class="leading-loose"><span class="font-kalam font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">How this started:</span> I was at an event for
                 <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
         </div>
@@ -96,8 +96,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 15 April, 2024</p>
-        <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 6 May, 2024</p>
+        <img src="./static/images/may-6-2024-game-night-fhe.png" alt="May 6, 2024 Game Night/FHE." class="border-4 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
 
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
