--- a/past-events.html
+++ b/past-events.html
@@ -72,7 +72,8 @@
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
-          <img src="./static/images/apr-1-2024-game-night-fhe.png" alt="April 1, 2024 Game Night/FHE." class="border-4 border-yellow-100 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+          <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/apr-1-2024-game-night-fhe.png" alt="April 1, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
         </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
