--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
-        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 20 May, 2024</p>
-        <img src="./static/images/may-20-2024-fhe-game-night.png" alt="May 20, 2024 Game Night/FHE." class="border-4 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Monday 17 June, 2024</p>
+        <p class="pb-4 text-yellow-400 text-lg md:text-2xl">Note: No FHE/Game Night on the first Monday in June, just on the third Monday!</p>
+        <img src="./static/images/june-2024-fhe-game-night.png" alt="June 17, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
 
         <iframe 
           src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
