--- a/past-events.html
+++ b/past-events.html
@@ -40,7 +40,6 @@
         }
       }
     </script>
-    <script id="bc-sticky-referral-widget-script" data-company="vn9yk7w8BN" data-placement="9b8c4b94-2ade-4901-8ebc-f30565836230" src="https://scripts.bestcompany.com/review-widget/sticky-referral-widget-v1.min.js"></script>
   </head>
 
   <body>
@@ -71,7 +70,10 @@
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
 
-        <img src="./static/images/may-6-2024-game-night-fhe.png" alt="May 6, 2024 Game Night/FHE." class="border-4 px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
+          <img src="./static/images/may-20-2024-fhe-game-night.png" alt="May 20, 2024 Game Night/FHE." class="w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
+          <img src="./static/images/may-6-2024-game-night-fhe.png" alt="May 6, 2024 Game Night/FHE." class="px-4 w-full md:w-1/2 lg:w-1/3 my-4 rounded-lg md:px-0"/>
+        </div>
 
         <div class="flex flex-col md:flex-row md:items-stretch justify-center container mx-auto space-y-6 md:space-y-0 md:space-x-6 w-full pb-12 px-4 md:px-0">
           <img src="./static/images/apr-15-2024-game-night-fhe.png" alt="April 15, 2024 Game Night/FHE." class="w-full md:w-1/2 lg:w-1/3 rounded-lg md:px-0"/>
